--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,12 @@ Imports:
     sp (>= 1.3-1),
     rgdal (>= 1.3-1),
     plotKML (>= 0.5-8),
-    magrittr (>= 1.5)
+    magrittr (>= 1.5),
+    raster (>= 2.6-7),
+    jpeg (>= 0.1-8),
+    pbapply (>= 1.3-4),
+    keras (>= 2.2.0.9001),
+    cowplot (>= 0.9.2)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0
