--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,8 @@ Imports:
     jpeg (>= 0.1-8),
     pbapply (>= 1.3-4),
     keras (>= 2.2.0.9001),
-    cowplot (>= 0.9.2)
+    cowplot (>= 0.9.2),
+    fs (>= 1.2.6)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0
