--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,13 +12,13 @@ License: What license is it under?
 Imports:
     tidyverse (>= 1.2.1),
     sp (>= 1.3-1),
-    rgdal (>= 1.3-1),
+    rgdal (>= 1.3),
     plotKML (>= 0.5-8),
     magrittr (>= 1.5),
     raster (>= 2.6-7),
     jpeg (>= 0.1-8),
     pbapply (>= 1.3-4),
-    keras (>= 2.2.0.9001),
+    keras (>= 2.2),
     cowplot (>= 0.9.2),
     fs (>= 1.2.6)
 Encoding: UTF-8
