--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,18 @@
+export(annotateImagePrediction)
+export(buildBalancedModelData)
+export(buildModelData)
+export(filenameExtractor)
+export(flightGridKML)
+export(flightLevelClassifier)
+export(flightMetricTally)
+export(hardNegativeExtractor)
+export(kmlCompiler)
+export(kmlMaker)
+export(mosaicer)
+export(retile)
+export(singleClassGrabber)
+export(tileLevelClassifier)
+export(topImageExporter)
 exportPattern("^[[:alpha:]]+")
 importFrom(magrittr,"%>%")
 importFrom(magrittr,"%<>%")
